--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.3
+ * style.css v6.63.5
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -39,7 +39,7 @@
   white-space: nowrap; }
 
 @media (min-width: 61.844rem) {
-  .section-footer, figcaption, .post-list ol time, .sidenote {
+  .section-footer, figcaption, .post-list time, .sidenote {
     margin-right: 1.618rem;
     position: absolute;
     right: 100%;
@@ -89,7 +89,7 @@ ol, h2 + dl, h2 + figure, h2 + table {
       margin-top: 0.391rem; } }
 
 figure, .global-header, .content, .content > article,
-.content > section, .subcontent, .site-search, .global-footer, .post-list ol li, .content .searchbox {
+.content > section, .subcontent, .site-search, .global-footer, .post-list li, .content .searchbox {
   position: relative; }
 
 html {
@@ -532,25 +532,16 @@ th {
 
 .post-list ol {
   padding-left: 0; }
-  .post-list ol li {
-    list-style-type: none;
-    margin-top: 0.618rem; }
-  .post-list ol time {
-    color: #98928c;
-    display: block; }
-  @media (min-width: 39.118rem) {
-    .post-list ol li {
-      padding-right: 5.809rem; }
-    .post-list ol time {
-      position: absolute;
-      right: 0;
-      top: 0; } }
-  @media (min-width: 61.844rem) {
-    .post-list ol li {
-      padding-right: 0; }
-    .post-list ol time {
-      right: 100%;
-      text-align: right; } }
+.post-list li {
+  list-style-type: none;
+  margin-top: 0.618rem; }
+.post-list time {
+  color: #98928c;
+  display: block;
+  font-size: 0.811rem; }
+@media (min-width: 61.844rem) {
+  .post-list time {
+    line-height: 1.995; } }
 
 .pull-quote {
   color: #6a625e;
@@ -588,7 +579,15 @@ th {
     display: block;
     font-size: 1rem;
     font-weight: bold;
-    text-transform: uppercase; }
+    margin-right: 1.618rem;
+    text-transform: uppercase;
+    width: 12.751rem; }
+@media (min-width: 61.844rem) {
+  .read-older p {
+    margin-left: -14.369rem; }
+    .read-older p::before {
+      display: inline-block;
+      font-size: inherit; } }
 
 .searchbox {
   max-width: 22.249rem; }
