Follow "Post List" style changes

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -109,5 +109,5 @@
 </a>
 
 <!-- blosxom categories_story -->
-            <li><time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">on $mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr at $ti</time>
+            <li><span class="date">on <time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time></span>
               <a href="$url$path/$fn.$default_flavour">$title</a></li>
