--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -41,7 +41,7 @@
         <section id="recent-articles" class="post-list">
           <ol>
             {{#item}}
-              <li><time datetime="{{html5PubDate}}">{{strPubDate}}</time>
+              <li><span class="date">on <time datetime="{{html5PubDate}}">{{strPubDate}}</time></span>
                 <a href="{{link}}">{{{title}}}</a></li>
             {{/item}}
           </ol>
