--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -51,7 +51,7 @@
             <ol>
         {{/isFirstInYear}}
 
-        <li><time datetime="{{html5PubDate}}">{{strPubDate}}</time>
+        <li><span class="date">on <time datetime="{{html5PubDate}}">{{strPubDate}}</time></span>
           <a href="{{link}}">{{{title}}}</a></li>
 
         {{#isLastInYear}}
