--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.5
+ * style.css v6.63.6
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -39,7 +39,7 @@
   white-space: nowrap; }
 
 @media (min-width: 61.844rem) {
-  .section-footer, figcaption, .post-list time, .sidenote {
+  .section-footer, figcaption, .post-list .date, .sidenote {
     margin-right: 1.618rem;
     position: absolute;
     right: 100%;
@@ -535,13 +535,19 @@ th {
 .post-list li {
   list-style-type: none;
   margin-top: 0.618rem; }
-.post-list time {
+.post-list .date {
   color: #98928c;
   display: block;
   font-size: 0.811rem; }
-@media (min-width: 61.844rem) {
-  .post-list time {
+.post-list time {
+  color: #3c3330; }
+@media (min-width: 39.118rem) {
+  .post-list .date {
+    float: right;
     line-height: 1.995; } }
+@media (min-width: 61.844rem) {
+  .post-list .date {
+    float: none; } }
 
 .pull-quote {
   color: #6a625e;
