Follow "Global Navigation" style changes

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,11 +1,9 @@
 <header class="global-header" role="banner">
-  {{#home}}<h1 class="logo"><mark><img alt="{{site_title}}" src="{{site_logo}}"></mark></h1>{{/home}}
-  {{^home}}<h1 class="logo"><a href="/"><img alt="{{site_title}}" src="{{site_logo}}"></a></h1>{{/home}}
+  <nav>
+    {{#home}}<mark class="logo"><img alt="{{site_title}}" src="{{site_logo}}"></mark>{{/home}}
+    {{^home}}<a class="logo" href="/"><img alt="{{site_title}}" src="{{site_logo}}"></a>{{/home}}
 
-  {{#home}}<p class="tagline">{{{tagline}}}</p>{{/home}}
-
-  <nav class="site-navigation">
-    <ul>
+    <ul class="site-navigation">
       {{#weblog}}
         {{#weblog_child}}<li><a href="/blog/"><mark>Weblog</mark></a></li>{{/weblog_child}}
         {{^weblog_child}}<li><mark>Weblog</mark></li>{{/weblog_child}}
@@ -18,4 +16,6 @@
       {{^about}}<li><a href="/about/">About</a></li>{{/about}}
     </ul>
   </nav>
+
+  {{#home}}<h1 class="tagline">{{{tagline}}}</h1>{{/home}}
 </header>
