Output tagline when tagline defined

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -17,5 +17,5 @@
     </ul>
   </nav>
 
-  {{#home}}<h1 class="tagline">{{{tagline}}}</h1>{{/home}}
+  {{#tagline}}<h1 class="tagline">{{{.}}}</h1>{{/tagline}}
 </header>
