--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -70,8 +70,8 @@
         <h1 class="first-heading" itemprop="name">$title</h1>
 
         <footer class="section-footer">
-          <p>on <time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
-            under <span class="tag" itemprop="keywords"><a href="$url$path/">$categories::name</a></span></p>
+          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
+            · <span class="tag" itemprop="keywords"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
 
         <div itemprop="articleBody">$body</div>
@@ -109,5 +109,5 @@
 </a>
 
 <!-- blosxom categories_story -->
-            <li><span class="date">on <time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time></span>
+            <li><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
               <a href="$url$path/$fn.$default_flavour">$title</a></li>
