--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -25,8 +25,8 @@
               <h1 class="first-heading">{{{title}}}</h1>
 
               <footer class="section-footer">
-                <p>on <time datetime="{{html5PubDate}}">{{strPubDate}}</time>
-                  under <span class="tag">{{category}}</span></p>
+                <p><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
+                  · <span class="tag">{{category}}</span></p>
               </footer>
 
               {{#hasImage}}<figure>{{{image}}}</figure>{{/hasImage}}
@@ -41,7 +41,7 @@
         <section id="recent-articles" class="post-list">
           <ol>
             {{#item}}
-              <li><span class="date">on <time datetime="{{html5PubDate}}">{{strPubDate}}</time></span>
+              <li><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
                 <a href="{{link}}">{{{title}}}</a></li>
             {{/item}}
           </ol>
@@ -58,7 +58,7 @@
         {{#updates}}
           <ol>
             {{#item}}
-              <li><time datetime="{{html5PubDate}}">{{strPubDate}}</time>
+              <li><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
                 <a href="{{link}}">{{{title}}}</a></li>
             {{/item}}
           </ol>
