--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,121 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.8
+ * style.css v6.63.9
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
  */
+/**
+ * Remove default margin.
+ */
+body {
+  margin: 0; }
+
+/**
+ * Correct `block` display not defined for any HTML5 element in IE 8/9.
+ * Correct `block` display not defined for `details` or `summary` in IE 10/11
+ * and Firefox.
+ * Correct `block` display not defined for `main` in IE 11.
+ */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block; }
+
+/**
+ * 1. Correct `inline-block` display not defined in IE 8/9.
+ * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
+ */
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */ }
+
+/*
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+/*
+ * Address `[hidden]` styling not present in IE 8/9/10.
+ * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
+ */
+[hidden],
+template {
+  display: none; }
+
+/**
+ * Remove border when inside `a` element in IE 8/9/10.
+ */
+img {
+  border: 0; }
+
+/**
+ * Correct overflow not hidden in IE 8/9/10/11.
+ */
+svg:not(:root) {
+  overflow: hidden; }
+
+/**
+ * Address differences between Firefox and other browsers.
+ */
+hr {
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0; }
+
+/**
+ * Contain overflow in all browsers.
+ */
+pre {
+  overflow: auto; }
+
+/**
+ * 1. Correct color not being inherited.
+ *    Known issue: affects color of disabled elements.
+ * 2. Correct font properties not being inherited.
+ * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+  margin: 0;
+  /* 3 */ }
+
+/**
+ * Remove most spacing between table cells.
+ */
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+th,
+td {
+  padding: 0; }
+
 @font-face {
   font-family: 'Emoji';
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
@@ -329,7 +440,7 @@ th {
     .tagline {
       font-size: 2.124rem;
       margin-top: 6.854rem;
-      padding-left: 0;
+      padding-left: 0.809rem;
       max-width: 50.369rem; } }
 
 .site-navigation {
@@ -579,25 +690,26 @@ th {
       margin-left: -14.369rem;
       width: 27.12rem; } }
 
-.read-older p {
-  font-size: 1.618rem;
-  line-height: 1.294;
+.read-older {
   margin-top: 4.236rem; }
-  .read-older p::before {
+  .read-older a::before {
     color: #534a47;
     content: 'Read older:';
     display: block;
-    font-size: 1rem;
     font-weight: bold;
     margin-right: 1.618rem;
     text-transform: uppercase;
     width: 12.751rem; }
-@media (min-width: 61.844rem) {
   .read-older p {
-    margin-left: -14.369rem; }
-    .read-older p::before {
-      display: inline-block;
-      font-size: inherit; } }
+    font-size: 1.618rem;
+    line-height: 1.294;
+    margin-top: 0; }
+  @media (min-width: 61.844rem) {
+    .read-older {
+      margin-left: -14.369rem; }
+      .read-older a::before {
+        float: left;
+        line-height: 2.094; } }
 
 .searchbox {
   max-width: 22.249rem; }
@@ -612,22 +724,20 @@ th {
     border-radius: 0;
     color: #3c3330;
     height: 1.868rem;
-    padding: 0 1.618rem 0 0.25rem;
+    padding: 0 0.25rem 0 1.618rem;
     width: 100%; }
   .searchbox .button {
     direction: ltr;
     text-indent: -9999px;
     background-color: transparent;
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%23817a75%22%2F%3E%3C%2Fsvg%3E");
-    background-position: center top;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: 100% auto;
     border: 0;
-    border-radius: 0;
     height: 1.618rem;
     padding: 0;
     position: absolute;
-    right: 0;
     top: 0.125rem;
     width: 1.618rem; }
 
