--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.9
+ * style.css v6.63.10
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -133,12 +133,12 @@ td {
     .tagline, .content, .subcontent, .global-footer {
       padding-left: 15.178rem; } }
 
-.flat-ul, .icon-list, .read-older {
+.flat-ul, .icon-list {
   zoom: 1; }
-  .flat-ul:before, .icon-list:before, .read-older:before, .flat-ul:after, .icon-list:after, .read-older:after {
+  .flat-ul:before, .icon-list:before, .flat-ul:after, .icon-list:after {
     display: block;
     content: ""; }
-  .flat-ul:after, .icon-list:after, .read-older:after {
+  .flat-ul:after, .icon-list:after {
     clear: both; }
 
 .section-footer p, .read-older p {
@@ -489,9 +489,11 @@ th {
       margin-top: 6.854rem; } }
 
 .site-search {
+  max-width: 22.249rem;
   top: 6.854rem; }
   @media (min-width: 39.118rem) {
     .site-search {
+      max-width: 13.751rem;
       position: absolute;
       right: 0.809rem;
       top: 8.194rem;
@@ -513,6 +515,14 @@ th {
     content: '\a0\a0'; }
   .footlinks li:first-child::after {
     content: ' ·\a0'; }
+.footlinks a[href^='https://twitter.com/'] {
+  color: #00acee; }
+.footlinks a[href^='https://www.facebook.com/'] {
+  color: #3b5998; }
+.footlinks a[href$='.tumblr.com/'] {
+  color: #34526f; }
+.footlinks a[type='application/rss+xml'] {
+  color: #ee802f; }
 @media (min-width: 61.844rem) {
   .footlinks ul {
     margin-top: 6.854rem; } }
@@ -690,56 +700,47 @@ th {
       margin-left: -14.369rem;
       width: 27.12rem; } }
 
-.read-older {
-  margin-top: 4.236rem; }
-  .read-older a::before {
-    color: #534a47;
-    content: 'Read older:';
-    display: block;
-    font-weight: bold;
-    margin-right: 1.618rem;
-    text-transform: uppercase;
-    width: 12.751rem; }
-  .read-older p {
-    font-size: 1.618rem;
-    line-height: 1.294;
-    margin-top: 0; }
-  @media (min-width: 61.844rem) {
-    .read-older {
-      margin-left: -14.369rem; }
-      .read-older a::before {
-        float: left;
-        line-height: 2.094; } }
+.read-older a::before {
+  color: #534a47;
+  content: 'Read older:';
+  display: block;
+  font-weight: bold;
+  line-height: 1;
+  margin-top: 4.236rem;
+  text-transform: uppercase; }
+.read-older p {
+  font-size: 1.618rem;
+  line-height: 1.294;
+  margin-top: 0; }
 
-.searchbox {
+.content .searchbox {
+  margin-top: 1.618rem;
   max-width: 22.249rem; }
-  .content .searchbox {
-    margin-top: 1.618rem; }
-  .searchbox .query {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    background-color: #fdfcf7;
-    border: 0.063rem solid #e1ddd5;
-    border-radius: 0;
-    color: #3c3330;
-    height: 1.868rem;
-    padding: 0 0.25rem 0 1.618rem;
-    width: 100%; }
-  .searchbox .button {
-    direction: ltr;
-    text-indent: -9999px;
-    background-color: transparent;
-    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%23817a75%22%2F%3E%3C%2Fsvg%3E");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    border: 0;
-    height: 1.618rem;
-    padding: 0;
-    position: absolute;
-    top: 0.125rem;
-    width: 1.618rem; }
+.searchbox .query {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  background-color: #fdfcf7;
+  border: 0.063rem solid #e1ddd5;
+  border-radius: 0;
+  color: #3c3330;
+  height: 1.868rem;
+  padding: 0 0.25rem 0 1.618rem;
+  width: 100%; }
+.searchbox .button {
+  direction: ltr;
+  text-indent: -9999px;
+  background-color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%23817a75%22%2F%3E%3C%2Fsvg%3E");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  border: 0;
+  height: 1.618rem;
+  padding: 0;
+  position: absolute;
+  top: 0.125rem;
+  width: 1.618rem; }
 
 .seealso {
   color: #6a625e;
