--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.10
+ * style.css v6.63.11
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -150,7 +150,7 @@ td {
   white-space: nowrap; }
 
 @media (min-width: 61.844rem) {
-  .section-footer, figcaption, .post-list .date, .sidenote {
+  .section-footer, figcaption, .post-list .date, .sidenote, .share-buttons ul {
     margin-right: 1.618rem;
     position: absolute;
     right: 100%;
@@ -173,7 +173,7 @@ hr, .seealso {
     background-repeat: no-repeat;
     background-size: contain; }
 
-h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read-older a, .seealso a, .seemore a, .topic a {
+h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read-older a, .seealso a, .seemore a, .topic a, .share-buttons a {
   background-image: none;
   color: #1188bb; }
 
@@ -777,6 +777,28 @@ th {
   margin-left: 0.333rem;
   text-transform: uppercase;
   white-space: nowrap; }
+
+.share-buttons ul {
+  padding-left: 0; }
+.share-buttons li {
+  display: table-cell;
+  padding-right: 0.809rem; }
+.share-buttons a {
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size: auto 80%;
+  display: inline-block;
+  padding-left: 1.419rem; }
+.share-buttons .twitter-tweet a {
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M492.255%20109.456c-17.384%207.71-36.07%2012.92-55.676%2015.264%2020.01-11.997%2035.383-30.994%2042.622-53.632-18.733%2011.11-39.478%2019.177-61.56%2023.524C399.96%2075.77%20374.764%2064%20346.88%2064c-53.535%200-96.942%2043.402-96.942%2096.938%200%207.598.857%2014.997%202.51%2022.092-80.566-4.042-152-42.637-199.81-101.287-8.345%2014.317-13.126%2030.97-13.126%2048.737%200%2033.633%2017.114%2063.305%2043.127%2080.688-15.89-.503-30.84-4.864-43.907-12.124-.01.404-.01.808-.01%201.22%200%2046.967%2033.417%2086.146%2077.763%2095.054-8.134%202.215-16.698%203.4-25.54%203.4-6.246%200-12.318-.608-18.24-1.74%2012.338%2038.513%2048.138%2066.542%2090.56%2067.32C130.087%20390.303%2088.288%20405.8%2042.87%20405.8c-7.825%200-15.542-.46-23.125-1.356C62.645%20431.95%20113.602%20448%20168.345%20448c178.31%200%20275.82-147.716%20275.82-275.82%200-4.204-.096-8.383-.283-12.54%2018.943-13.67%2035.377-30.743%2048.373-50.184%22%20fill%3D%22%2300acee%22%2F%3E%3C%2Fsvg%3E");
+  color: #00acee; }
+.share-buttons .facebook-share a {
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M350.912%2071.615c-10.38-2.22-20.215-4.034-29.507-5.44-9.292-1.404-19.4-2.13-30.323-2.175-31.82.136-54.8%207.48-68.94%2022.028-14.142%2014.55-21.077%2035.49-20.805%2062.822v39.705h-40.25v64.182h40.25V448h78.323V252.737h57.11l5.44-64.182h-62.55v-31.003c-.453-8.793.86-15.682%203.943-20.668%203.082-4.986%2010.652-7.524%2022.71-7.615%204.814.022%2010.412.385%2016.792%201.087%206.38.703%2012.385%201.61%2018.017%202.72z%22%20fill%3D%22%233b5998%22%2F%3E%3C%2Fsvg%3E");
+  color: #3b5998; }
+@media (min-width: 61.844rem) {
+  .share-buttons ul {
+    bottom: 0;
+    top: auto; } }
 
 .adsbygoogle {
   height: 250px;
