--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.12
+ * style.css v6.63.13
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -266,16 +266,12 @@ blockquote {
 ul,
 ol {
   clear: both;
-  padding: 0 0 0 1.618rem; }
+  padding: 0 0 0 2.618rem; }
   ul ul,
   ul ol,
   ol ul,
   ol ol {
     margin-top: 0; }
-  @media (min-width: 39.118rem) {
-    ul,
-    ol {
-      padding-left: 2.618rem; } }
   @media (min-width: 61.844rem) {
     ul,
     ol {
@@ -296,7 +292,7 @@ dt {
   font-weight: bold; }
 
 dd {
-  padding-left: 1.618rem; }
+  padding-left: 2.618rem; }
 
 figcaption {
   color: #6a625e;
@@ -430,7 +426,6 @@ th {
   font-family: "Megrim", "Source Sans Pro", "Emoji", sans-serif;
   font-size: 1.313rem;
   font-weight: 200;
-  line-height: 1.294;
   margin-top: 2.618rem; }
   @media (min-width: 39.118rem) {
     .tagline {
@@ -440,8 +435,8 @@ th {
     .tagline {
       font-size: 2.124rem;
       margin-top: 6.854rem;
-      padding-left: 0.809rem;
-      max-width: 50.369rem; } }
+      max-width: 50.369rem;
+      padding-left: 0.809rem; } }
 
 .site-navigation {
   font-size: 0.811rem;
@@ -453,7 +448,6 @@ th {
   top: 0; }
   .site-navigation li {
     display: table-cell;
-    height: 1.86rem;
     line-height: 1.86rem;
     padding-left: 0.809rem; }
   .site-navigation a {
@@ -682,7 +676,6 @@ th {
   margin-right: 1.618rem;
   text-align: center; }
   .pull-quote p {
-    margin-top: 1.618rem;
     quotes: '\201c' '\201d'; }
     .pull-quote p::before {
       content: open-quote;
@@ -839,13 +832,14 @@ html {
     text-shadow: none !important; }
 
   aside,
-  nav,
   hr::before,
-  body > header h1,
+  .site-navigation,
   .footlinks,
+  .byline::before,
   .icon-list,
+  .searchbox,
   .seealso::before,
-  .topic > a > p::after {
+  .topic .section-footer + p::after {
     display: none; }
 
   body {
@@ -917,14 +911,16 @@ html {
   td {
     white-space: normal; }
 
-  body > header,
-  main,
-  body > footer {
+  .global-header,
+  .content,
+  .global-footer {
     max-width: none; }
 
-  body > header h1 {
-    display: block;
+  .logo {
     margin-top: 1.618rem; }
 
-  main {
-    margin-top: 0; } }
+  .content {
+    margin-top: 0; }
+
+  .byline {
+    margin-top: 6.854rem; } }
