--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.13
+ * style.css v6.63.14
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -188,7 +188,8 @@ ol, h2 + dl, h2 + figure, h2 + table {
 .section-footer {
   bottom: 100%;
   font-size: 0.811rem;
-  position: absolute; }
+  position: absolute;
+  width: 100%; }
   .section-footer p {
     color: #98928c; }
   @media (min-width: 61.844rem) {
@@ -422,22 +423,6 @@ th {
   margin-top: 0.809rem;
   width: 1.86rem; }
 
-.tagline {
-  font-family: "Megrim", "Source Sans Pro", "Emoji", sans-serif;
-  font-size: 1.313rem;
-  font-weight: 200;
-  margin-top: 2.618rem; }
-  @media (min-width: 39.118rem) {
-    .tagline {
-      font-size: 1.618rem;
-      margin-top: 4.236rem; } }
-  @media (min-width: 61.844rem) {
-    .tagline {
-      font-size: 2.124rem;
-      margin-top: 6.854rem;
-      max-width: 50.369rem;
-      padding-left: 0.809rem; } }
-
 .site-navigation {
   font-size: 0.811rem;
   margin-top: 0;
@@ -461,6 +446,22 @@ th {
   @media (min-width: 39.118rem) {
     .site-navigation li {
       padding-left: 1.618rem; } }
+
+.tagline {
+  font-family: "Megrim", "Source Sans Pro", "Emoji", sans-serif;
+  font-size: 1.313rem;
+  font-weight: 200;
+  margin-top: 2.618rem; }
+  @media (min-width: 39.118rem) {
+    .tagline {
+      font-size: 1.618rem;
+      margin-top: 4.236rem; } }
+  @media (min-width: 61.844rem) {
+    .tagline {
+      font-size: 2.124rem;
+      margin-top: 6.854rem;
+      max-width: 50.369rem;
+      padding-left: 0.809rem; } }
 
 .content {
   margin-top: -4.236rem; }
@@ -730,6 +731,7 @@ th {
   background-size: 100% auto;
   border: 0;
   height: 1.618rem;
+  left: 0;
   padding: 0;
   position: absolute;
   top: 0.125rem;
