--- a/src/html/partial/site-search.mustache
+++ b/src/html/partial/site-search.mustache
@@ -1,6 +1,6 @@
 <aside class="subcontent">
   <!-- Google Custom Search Engine -->
-  <form class="site-search searchbox" action="https://www.google.com/cse" role="search"{{#home}} itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction"{{/home}}>
+  <form class="site-search" action="https://www.google.com/cse" role="search"{{#home}} itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction"{{/home}}>
     {{#home}}<meta content="https://www.google.com/cse?cx=partner-pub-8712792805045949:3747342316&amp;ie=UTF-8&amp;q={q}&amp;sa=Search" itemprop="target">{{/home}}
     <input name="cx" type="hidden" value="partner-pub-8712792805045949:3747342316">
     <input name="ie" type="hidden" value="UTF-8">
