--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.14
+ * style.css v6.63.15
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -193,12 +193,41 @@ ol, h2 + dl, h2 + figure, h2 + table {
   .section-footer p {
     color: #98928c; }
   @media (min-width: 61.844rem) {
-    .section-footer p {
-      margin-top: 0.391rem; } }
+    .section-footer {
+      width: 12.751rem; }
+      .section-footer p {
+        margin-top: 0.391rem; } }
 
-figure, .global-header, .content, .content > article,
-.content > section, .subcontent, .site-search, .global-footer, .post-list li, .content .searchbox {
+.site-search, .searchbox, figure, .global-header, .content, .content > article,
+.content > section, .subcontent, .global-footer, .post-list li {
   position: relative; }
+
+.site-search .query, .searchbox .query {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  background-color: #fdfcf7;
+  border: 0.063rem solid #e1ddd5;
+  border-radius: 0;
+  color: #3c3330;
+  height: 1.868rem;
+  padding: 0 0.25rem 0 1.618rem;
+  width: 100%; }
+.site-search .button, .searchbox .button {
+  direction: ltr;
+  text-indent: -9999px;
+  background-color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%23817a75%22%2F%3E%3C%2Fsvg%3E");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  border: 0;
+  height: 1.618rem;
+  left: 0;
+  padding: 0;
+  position: absolute;
+  top: 0.125rem;
+  width: 1.618rem; }
 
 html {
   -moz-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
@@ -707,35 +736,8 @@ th {
   line-height: 1.294;
   margin-top: 0; }
 
-.content .searchbox {
-  margin-top: 1.618rem;
+.searchbox {
   max-width: 22.249rem; }
-.searchbox .query {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-appearance: none;
-  background-color: #fdfcf7;
-  border: 0.063rem solid #e1ddd5;
-  border-radius: 0;
-  color: #3c3330;
-  height: 1.868rem;
-  padding: 0 0.25rem 0 1.618rem;
-  width: 100%; }
-.searchbox .button {
-  direction: ltr;
-  text-indent: -9999px;
-  background-color: transparent;
-  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%23817a75%22%2F%3E%3C%2Fsvg%3E");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  border: 0;
-  height: 1.618rem;
-  left: 0;
-  padding: 0;
-  position: absolute;
-  top: 0.125rem;
-  width: 1.618rem; }
 
 .seealso {
   color: #6a625e;
