--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.15
+ * style.css v6.64.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -119,17 +119,17 @@ td {
 @font-face {
   font-family: 'Emoji';
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
-@media (min-width: 39.118rem) {
-  /*! Applied wider than 39.118rem */ }
-@media (min-width: 61.844rem) {
-  /*! Applied wider than 61.844rem */ }
+@media (min-width: 45.23rem) {
+  /*! Applied wider than 45.23rem */ }
+@media (min-width: 70.202rem) {
+  /*! Applied wider than 70.202rem */ }
 .tagline, .content, .subcontent, .global-footer {
   margin-left: auto;
   margin-right: auto;
   max-width: 36rem;
   padding-left: 0.809rem;
   padding-right: 0.809rem; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .tagline, .content, .subcontent, .global-footer {
       padding-left: 15.178rem; } }
 
@@ -149,7 +149,7 @@ td {
   text-overflow: ellipsis;
   white-space: nowrap; }
 
-@media (min-width: 61.844rem) {
+@media (min-width: 70.202rem) {
   .section-footer, figcaption, .post-list .date, .sidenote, .share-buttons ul {
     margin-right: 1.618rem;
     position: absolute;
@@ -192,7 +192,7 @@ ol, h2 + dl, h2 + figure, h2 + table {
   width: 100%; }
   .section-footer p {
     color: #98928c; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .section-footer {
       width: 12.751rem; }
       .section-footer p {
@@ -234,16 +234,19 @@ html {
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-size: 100%; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 73.184rem) {
     html {
       font-size: 115.625%; } }
+  @media (min-width: 113.588rem) {
+    html {
+      font-size: 131.25%; } }
 
 body {
   background-color: #fcf9f0;
   color: #3c3330;
   font-family: "Source Sans Pro", "Emoji", sans-serif;
   line-height: 1.456; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 45.23rem) {
     body {
       line-height: 1.618; } }
 
@@ -277,7 +280,7 @@ pre {
   font-family: "Source Code Pro", "Emoji", monospace;
   font-size: 0.811rem;
   line-height: 1.294; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 45.23rem) {
     pre {
       overflow-wrap: break-word;
       overflow-x: visible;
@@ -289,7 +292,7 @@ blockquote {
   color: #6a625e;
   margin: 0;
   padding-left: 1.618rem; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     blockquote {
       margin-left: -1.868rem; } }
 
@@ -302,7 +305,7 @@ ol {
   ol ul,
   ol ol {
     margin-top: 0; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     ul,
     ol {
       padding-left: 0; }
@@ -325,20 +328,16 @@ dd {
   padding-left: 2.618rem; }
 
 figcaption {
-  color: #6a625e;
-  margin-top: 0.618rem; }
+  color: #6a625e; }
   blockquote + figcaption:last-child {
     border-left: 0.25rem solid #e1ddd5;
     color: #6a625e;
-    margin-top: 0;
     padding-left: 1.618rem;
     padding-top: 0.618rem; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     figcaption {
       border-top: 0.063rem solid #e1ddd5;
-      margin-top: 0;
-      padding-top: 0.681rem;
-      top: 0; }
+      padding-top: 0.681rem; }
       figcaption:last-child {
         border-bottom: 0.063rem solid #e1ddd5;
         border-top-width: 0;
@@ -472,7 +471,7 @@ th {
     border-bottom: 0.125rem solid;
     color: #3598c3;
     padding-bottom: 0.125rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 45.23rem) {
     .site-navigation li {
       padding-left: 1.618rem; } }
 
@@ -481,11 +480,11 @@ th {
   font-size: 1.313rem;
   font-weight: 200;
   margin-top: 2.618rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 45.23rem) {
     .tagline {
       font-size: 1.618rem;
       margin-top: 4.236rem; } }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .tagline {
       font-size: 2.124rem;
       margin-top: 6.854rem;
@@ -494,10 +493,10 @@ th {
 
 .content {
   margin-top: -4.236rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 45.23rem) {
     .content {
       margin-top: -2.618rem; } }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .content {
       margin-top: 0rem; } }
 
@@ -508,21 +507,21 @@ th {
 
 .first-heading {
   margin-top: 8.167rem; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .first-heading {
       margin-top: 6.854rem; } }
 
 .site-search {
   max-width: 22.249rem;
   top: 6.854rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 45.23rem) {
     .site-search {
       max-width: 13.751rem;
       position: absolute;
       right: 0.809rem;
       top: 8.194rem;
       z-index: 1; } }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .site-search {
       top: 6.576rem; } }
 
@@ -547,7 +546,7 @@ th {
   color: #34526f; }
 .footlinks a[type='application/rss+xml'] {
   color: #ee802f; }
-@media (min-width: 61.844rem) {
+@media (min-width: 70.202rem) {
   .footlinks ul {
     margin-top: 6.854rem; } }
 
@@ -563,7 +562,7 @@ th {
   .byline mark {
     background-color: transparent;
     color: inherit; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .byline {
       bottom: 0;
       left: 0.809rem;
@@ -578,14 +577,14 @@ th {
 
 .drop img {
   min-width: 12.751rem; }
-@media (min-width: 61.844rem) {
+@media (min-width: 70.202rem) {
   .drop {
     float: left;
     margin-left: -14.369rem;
     margin-right: 0.809rem;
     max-width: 32.369rem; } }
 
-@media (min-width: 39.118rem) {
+@media (min-width: 45.23rem) {
   .flat-ul {
     margin-left: -0.809rem;
     margin-right: -0.809rem;
@@ -599,7 +598,7 @@ th {
       padding-right: 0.809rem;
       width: 33.333%; } }
 
-@media (min-width: 39.118rem) {
+@media (min-width: 45.23rem) {
   .floatage-left {
     float: left;
     margin-right: 0.809rem;
@@ -629,7 +628,7 @@ th {
     width: 100%; }
   .full-width figcaption:last-child {
     margin-left: 0.809rem; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .full-width {
       margin-left: -15.178rem; }
       .full-width figcaption:last-child {
@@ -681,11 +680,11 @@ th {
   display: block;
   font-size: 0.811rem;
   line-height: 1; }
-@media (min-width: 39.118rem) {
+@media (min-width: 45.23rem) {
   .post-list .date {
     float: right;
     line-height: 1.995; } }
-@media (min-width: 61.844rem) {
+@media (min-width: 70.202rem) {
   .post-list .date {
     float: none;
     overflow-x: hidden;
@@ -713,11 +712,11 @@ th {
     .pull-quote p::after {
       content: close-quote;
       font-weight: bold; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 45.23rem) {
     .pull-quote {
       margin-left: 2.618rem;
       margin-right: 2.618rem; } }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .pull-quote {
       float: left;
       margin-left: -14.369rem;
@@ -760,7 +759,7 @@ th {
 .sidenote {
   color: #98928c;
   font-size: 0.811rem; }
-  @media (min-width: 61.844rem) {
+  @media (min-width: 70.202rem) {
     .sidenote {
       top: auto; } }
 
@@ -797,7 +796,7 @@ th {
 .share-buttons .hatena-bookmark a {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M362.52%20374.158c-1.06%2027.738%2029.272%2050.062%2055.45%2040.82%2026.608-7.228%2039.004-42.437%2022.73-64.717-14.53-23.373-51.72-25.17-68.422-3.29-6.286%207.567-9.8%2017.35-9.76%2027.188zm3.82-279.222h77.837v212.59H366.34V94.936zM247.945%20237.96c28.8-2.354%2051.608-28.057%2053.18-56.463%203.66-27.783-5.13-60.604-31.928-73.97-33.543-16.95-72.07-11.418-108.353-12.42-32.282%200-64.563-.004-96.845-.006v321.964c49.15-.277%2098.325.59%20147.46-.508%2037.25-1.846%2079.264-14.91%2097.464-50.294%2018.813-37.007%2012.952-90.027-24.076-113.605-11.14-7.354-23.904-11.933-36.902-14.698zm-101.92-82.215c17.912.9%2036.476-2.518%2053.72%203.52%2026.227%207.993%2024.854%2053.487-2.882%2057.92-16.806%202.46-33.892.985-50.834%201.388%200-20.942-.002-41.885-.004-62.828zM188.43%20348.61h-42.406v-70.67c21.382.678%2043.044-1.73%2064.18%202.102%2022.726%204.5%2027.114%2033.67%2018.215%2051.517-7.668%2014.163-25.366%2017.096-39.99%2017.05z%22%20fill%3D%22%23008cd6%22%2F%3E%3C%2Fsvg%3E");
   color: #008cd6; }
-@media (min-width: 61.844rem) {
+@media (min-width: 70.202rem) {
   .share-buttons ul {
     bottom: 0;
     top: auto; } }
