--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.64.1
+ * style.css v6.64.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -234,10 +234,10 @@ html {
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-size: 100%; }
-  @media (min-width: 73.184rem) {
+  @media (min-width: 52.297rem) and (min-height: 26.149rem) {
     html {
       font-size: 115.625%; } }
-  @media (min-width: 113.588rem) {
+  @media (min-width: 113.588rem) and (min-height: 56.794rem) {
     html {
       font-size: 131.25%; } }
 
