--- a/styles/style.css
+++ b/styles/style.css
@@ -432,9 +432,7 @@ table {
 th,
 td {
   border-bottom: 0.063rem solid #e1ddd5;
-  padding-bottom: 0.5rem;
-  padding-right: 1rem;
-  padding-top: 0.5rem;
+  padding: 0.5rem;
   vertical-align: top;
   white-space: nowrap; }
 
