--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.64.3
+ * style.css v6.65.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -198,7 +198,7 @@ ol, h2 + dl, h2 + figure, h2 + table {
       .section-footer p {
         margin-top: 0.391rem; } }
 
-.site-search, .searchbox, figure, .global-header, .content, .content > article,
+.site-search, .searchbox, figure, .global-header, .logo, .content, .content > article,
 .content > section, .subcontent, .global-footer, .post-list li {
   position: relative; }
 
@@ -442,12 +442,22 @@ th {
     border-bottom-width: 0.125rem; }
 
 .logo {
-  background-color: transparent;
+  background-color: #5bacd0;
   display: block;
   height: 1.86rem;
   margin-left: 0.809rem;
-  margin-top: 0.809rem;
+  padding-top: 0.575rem;
   width: 1.86rem; }
+  .logo::after {
+    border-right: 1.86rem solid transparent;
+    border-top: 0.575rem solid #5bacd0;
+    content: '';
+    display: block;
+    height: 0;
+    left: 0;
+    position: absolute;
+    top: 100%;
+    width: 0; }
 
 .site-navigation {
   font-size: 0.811rem;
@@ -456,7 +466,7 @@ th {
   position: absolute;
   right: 0.809rem;
   text-transform: uppercase;
-  top: 0; }
+  top: 0.575rem; }
   .site-navigation li {
     display: table-cell;
     line-height: 1.86rem;
@@ -825,8 +835,9 @@ html {
     text-shadow: none !important; }
 
   aside,
+  nav,
   hr::before,
-  .site-navigation,
+  .global-header,
   .footlinks,
   .byline::before,
   .icon-list,
@@ -845,15 +856,13 @@ html {
   kbd {
     font-family: monospace; }
 
-  .tagline {
-    font-family: "Megrim", "Source Sans Pro", "Emoji", sans-serif; }
-
   h1,
   h2,
   h3,
   h4,
   h5,
-  h6 {
+  h6,
+  figcaption {
     page-break-after: avoid;
     page-break-inside: avoid; }
 
@@ -873,29 +882,17 @@ html {
 
   hr {
     border-bottom: 1px dashed #000;
-    border-top: 1px dashed #000;
     height: 0;
-    margin-bottom: 3.236rem;
-    margin-top: 3.236rem;
-    width: 80%; }
+    margin-bottom: 4.236rem;
+    margin-top: 4.236rem;
+    width: 61.804%; }
 
   pre {
     margin: 1.618rem 0 0;
     padding: 0; }
 
-  blockquote {
-    border-left: 0;
-    margin: 0 2.618rem;
-    padding-left: 0; }
-
-  blockquote + figcaption:last-child {
-    border-left: 0;
-    padding-left: 2.618rem; }
-
   a {
     color: inherit; }
-    a[href]::after {
-      content: " (" attr(href) ")"; }
 
   table {
     table-layout: auto; }
@@ -904,13 +901,9 @@ html {
   td {
     white-space: normal; }
 
-  .global-header,
   .content,
   .global-footer {
     max-width: none; }
-
-  .logo {
-    margin-top: 1.618rem; }
 
   .content {
     margin-top: 0; }
